Fix spacing for the category description box

--- a/src/flavors/cycle3/static/css/custom.css
+++ b/src/flavors/cycle3/static/css/custom.css
@@ -980,7 +980,7 @@ body[data-city_wide="true"] .location-field-label .regular-prompt { display: non
 
 .place-location_type-option-description {
   position: sticky;
-  top: 0;
+  top: calc(var(--pre-banner-height) + 1rem);
   z-index: 10000;
   background-color: var(--attention-bg);
   color: var(--attention-fg);
